// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check B repo-checker folder succeed 1`] = `
{
  "failed": [],
  "passed": [
    "has-a-editorconfig-file",
    "editorconfig-has-space-indent",
    "editorconfig-has-indent-size-of-2",
    "editorconfig-has-unix-style-line-endings",
    "editorconfig-has-utf-8-encoding",
    "editorconfig-has-whitespace-trailing",
    "editorconfig-has-final-new-line-rule",
    "editorconfig-has-no-specific-html-indent-rule",
    "avoid-main-branch-reference-use-master-instead-git-bclean",
    "has-a-gitignore-file",
    "gitignore-has-node-modules",
    "gitignore-has-no-pnpm-lock-exclusion",
    "github-workflows-ci-yml-has-a-checkout-step-in-ci-workflow",
    "github-workflows-ci-yml-has-a-recent-checkout-version",
    "github-workflows-ci-yml-has-a-pnpm-setup-step",
    "github-workflows-ci-yml-has-a-recent-pnpm-version",
    "github-workflows-ci-yml-has-no-frozen-lockfile-flag",
    "github-workflows-ci-yml-has-no-main-branch-reference",
    "github-workflows-ci-yml-has-a-node-step-in-ci-workflow",
    "github-workflows-ci-yml-has-a-recent-node-version",
    "has-a-license-file",
    "license-has-a-gpl-title",
    "license-has-a-version-3-subtitle",
    "has-a-npmrc-file",
    "npmrc-has-enable-pre-post-scripts-option",
    "has-a-nvmrc-file",
    "nvmrc-has-a-recent-lts-node-version",
    "has-a-package-json-file",
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-has-a-dist-repo-check-js-file",
    "package-json-main-file-specified-in-package-json-dist-repo-check-js-exists-on-disk-be-sure-to-build-before-run-repo-check",
    "package-json-main-file-size-XYZko-should-be-less-or-equal-to-max-size-allowed-120ko",
    "package-json-has-a-schema-declaration",
    "package-json-has-a-bugs-property",
    "package-json-has-a-description-property",
    "package-json-has-a-files-property",
    "package-json-has-a-homepage-property",
    "package-json-has-a-keywords-property",
    "package-json-has-a-private-property",
    "package-json-has-a-repository-property",
    "package-json-has-a-repository-url-starting-with-git-plus",
    "package-json-has-a-author-property",
    "package-json-has-a-name-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-gpl-3-0-license",
    "package-json-has-a-typescript-build-or-check",
    "package-json-has-a-script-section",
    "package-json-has-a-pre-script-for-version-automation",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-watchlist-eager-param",
    "package-json-has-a-depcruise-usage",
    "package-json-has-a-unique-mark-task",
    "package-json-has-pnpm-instead-of-npm-run",
    "package-json-has-a-check-script",
    "package-json-has-no-ci-script",
    "package-json-has-a-final-echo-for-task-build",
    "package-json-has-a-final-echo-for-task-check",
    "package-json-has-a-final-echo-for-task-lint",
    "package-json-has-a-final-echo-for-task-test",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-should-have-one-unit-testing-dependency-from-vitest-mocha-uvu-or-use-bun-test",
    "package-json-should-have-one-coverage-dependency-from-nyc-c8-v8-or-use-bun-test-coverage",
    "package-json-has-no-task-run-via-npm",
    "package-json-has-no-npm-test",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
    "package-json-has-a-type-module-declaration-for-modern-practices",
    "package-json-has-a-main-field-pointing-to-an-esm-js",
    "package-json-has-no-module-field",
    "package-json-has-an-exports-field-with-import-esm-js-require-cjs-cjs",
    "readme-md-has-a-title",
    "readme-md-has-a-logo-image",
    "readme-md-has-a-demo-image-or-gif",
    "readme-md-has-no-link-to-deprecated-netlify-com",
    "readme-md-has-no-links-without-https-scheme",
    "readme-md-has-no-crlf-windows-carriage-return",
    "readme-md-has-no-star-flavored-list",
    "readme-md-has-a-project-license-badge",
    "readme-md-has-a-npm-monthly-downloads-badge",
    "readme-md-has-a-npm-version-badge",
    "readme-md-has-a-publish-size-badge",
    "readme-md-has-a-install-size-badge",
    "readme-md-has-no-deprecated-bettercodehub-com-badge",
    "readme-md-has-no-deprecated-david-dm-org-badge",
    "readme-md-has-no-deprecated-lgtm-com-badge",
    "readme-md-has-no-deprecated-scrutinizer-ci-com-badge",
    "readme-md-has-no-deprecated-libraries-io-badge",
    "readme-md-has-a-thanks-section",
    "readme-md-has-a-thanks-to-shields-io",
    "readme-md-has-no-remaining-thanks-to-travis-ci-com",
    "readme-md-has-a-thanks-to-github",
    "readme-md-has-no-remaining-thanks-to-netlify",
    "readme-md-has-no-remaining-thanks-to-app-write",
    "readme-md-has-a-thanks-to-arg",
    "readme-md-has-no-remaining-thanks-to-ava",
    "readme-md-has-a-thanks-to-boxy-svg",
    "readme-md-has-no-remaining-thanks-to-bun",
    "readme-md-has-no-remaining-thanks-to-c8",
    "readme-md-has-no-remaining-thanks-to-chokidar",
    "readme-md-has-no-remaining-thanks-to-cypress-io",
    "readme-md-has-a-thanks-to-dependency-cruiser",
    "readme-md-has-no-remaining-thanks-to-esbuild",
    "readme-md-has-no-remaining-thanks-to-eslint",
    "readme-md-has-a-thanks-to-knip",
    "readme-md-has-no-remaining-thanks-to-mocha",
    "readme-md-has-no-remaining-thanks-to-npm-run-all",
    "readme-md-has-no-remaining-thanks-to-npm-parallel",
    "readme-md-has-no-remaining-thanks-to-nuxt",
    "readme-md-has-no-remaining-thanks-to-nyc",
    "readme-md-has-a-thanks-to-oxc",
    "readme-md-has-no-remaining-thanks-to-react",
    "readme-md-has-no-remaining-thanks-to-reef",
    "readme-md-has-a-thanks-to-repo-checker",
    "readme-md-has-no-remaining-thanks-to-rollup",
    "readme-md-has-no-remaining-thanks-to-servor",
    "readme-md-has-no-remaining-thanks-to-showdown",
    "readme-md-has-a-thanks-to-shuutils",
    "readme-md-has-a-thanks-to-svg-omg",
    "readme-md-has-no-remaining-thanks-to-tailwind-css",
    "readme-md-has-a-thanks-to-tsup",
    "readme-md-has-no-remaining-thanks-to-uv-u",
    "readme-md-has-a-thanks-to-v8",
    "readme-md-has-a-thanks-to-vitest",
    "readme-md-has-no-remaining-thanks-to-vite",
    "readme-md-has-no-remaining-thanks-to-vue",
    "readme-md-has-a-thanks-to-watchlist",
    "readme-md-has-no-remaining-thanks-to-xo",
    "readme-md-has-no-remaining-thanks-to-zod",
    "readme-md-has-a-star-chart",
    "readme-md-has-a-page-views-counter",
    "has-a-renovate-json-file",
    "renovate-json-has-a-schema-declaration",
    "renovate-json-has-an-extends-section",
    "renovate-json-has-a-base-config",
    "renovate-json-has-a-dashboard-setting-to-false",
    "renovate-json-has-an-auto-merge-preset",
    "renovate-json-has-a-preserve-semver-ranges-preset",
    "has-a-repo-checker-json-file",
    "tsconfig-json-has-a-schema-declaration",
    "tsconfig-json-has-an-include-section",
    "tsconfig-json-has-a-allow-unreachable-code-compiler-option",
    "tsconfig-json-has-a-allow-unused-labels-compiler-option",
    "tsconfig-json-has-a-check-js-compiler-option",
    "tsconfig-json-has-a-es-module-interop-compiler-option",
    "tsconfig-json-has-a-exact-optional-property-types-compiler-option",
    "tsconfig-json-has-a-force-consistent-casing-in-file-names-compiler-option",
    "tsconfig-json-has-a-no-fallthrough-cases-in-switch-compiler-option",
    "tsconfig-json-has-a-no-implicit-any-compiler-option",
    "tsconfig-json-has-a-no-implicit-override-compiler-option",
    "tsconfig-json-has-a-no-implicit-returns-compiler-option",
    "tsconfig-json-has-a-no-property-access-from-index-signature-compiler-option",
    "tsconfig-json-has-a-no-unchecked-indexed-access-compiler-option",
    "tsconfig-json-has-a-no-unused-locals-compiler-option",
    "tsconfig-json-has-a-no-unused-parameters-compiler-option",
    "tsconfig-json-has-a-skip-lib-check-compiler-option",
    "tsconfig-json-has-a-strict-compiler-option",
    "tsconfig-json-has-a-verbatim-module-syntax-compiler-option",
    "tsconfig-json-has-a-out-dir-compiler-option",
    "tsconfig-json-has-a-module-resolution-compiler-option",
    "tsconfig-json-has-a-non-empty-lib-compiler-option",
    "tsconfig-json-my-folder-is-not-needed-in-include-section-my-folder-is-enough",
    "vitest-config-mts-has-a-pool-thread-setting",
  ],
  "warnings": [],
}
`;

exports[`check C ts-project folder 1`] = `
{
  "failed": [
    "has-a-editorconfig-file",
    "has-a-gitignore-file",
    "has-a-license-file",
    "has-a-nvmrc-file",
    "package-json-does-not-have-a-name-property-name",
    "package-json-does-not-have-a-typescript-build-or-check-like-build-tsc-or-check-tsc-no-emit",
    "package-json-does-not-have-prepare-instead-of-prepublish-deprecated-prepublish",
    "package-json-does-not-have-a-types-field-in-exports-types-d-ts",
    "package-json-does-not-have-a-main-field-pointing-to-an-esm-js-like-main-dist-index-js",
    "package-json-does-not-have-an-exports-field-with-import-esm-js-require-cjs-cjs-like-exports-import-dist-index-js-require-dist-index-cjs",
  ],
  "passed": [
    "avoid-main-branch-reference-use-master-instead-git-bclean",
    "has-a-package-json-file",
    "package-json-has-a-description-property",
    "package-json-has-a-author-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-mit-license",
    "package-json-has-a-script-section",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-no-ci-script",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-should-have-one-unit-testing-dependency-from-vitest-mocha-uvu-or-use-bun-test",
    "package-json-assert-dependency-used-in-import-equal-from-uvu-assert-instead-works-also-as-deep-equal-alternative",
    "package-json-has-no-npm-test",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
    "package-json-has-a-type-module-declaration-for-modern-practices",
    "package-json-has-no-module-field",
    "readme-md-has-a-title",
    "readme-md-has-no-link-to-deprecated-netlify-com",
    "readme-md-has-no-links-without-https-scheme",
    "readme-md-has-no-crlf-windows-carriage-return",
    "readme-md-has-no-star-flavored-list",
    "readme-md-has-no-deprecated-bettercodehub-com-badge",
    "readme-md-has-no-deprecated-david-dm-org-badge",
    "readme-md-has-no-deprecated-lgtm-com-badge",
    "readme-md-has-no-deprecated-scrutinizer-ci-com-badge",
    "readme-md-has-no-deprecated-libraries-io-badge",
    "has-a-repo-checker-json-file",
    "tsconfig-json-has-a-schema-declaration",
    "tsconfig-json-has-an-include-section",
    "tsconfig-json-has-a-verbatim-module-syntax-compiler-option",
    "tsconfig-json-has-a-out-dir-compiler-option",
    "tsconfig-json-has-a-module-resolution-compiler-option",
    "tsconfig-json-has-a-non-empty-lib-compiler-option",
    "tsconfig-json-my-folder-is-not-needed-in-include-section-my-folder-is-enough",
  ],
  "warnings": [
    "use-dependency-cruiser",
    "has-a-npmrc-file",
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-could-have-a-schema-declaration-like-schema-https-json-schemastore-org-package-43m30m-fixable-39m49m",
    "package-json-could-have-a-bugs-property-bugs",
    "package-json-could-have-a-files-property-files-n",
    "package-json-could-have-a-homepage-property-homepage",
    "package-json-could-have-a-keywords-property-keywords-n",
    "package-json-could-have-a-private-property-private-falsetrue-n",
    "package-json-could-have-a-repository-property-repository-n",
    "package-json-could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "package-json-could-have-pnpm-instead-of-npm-run-use-pnpm-instead-of-npm-run-for-performance-43m30m-fixable-39m49m",
    "package-json-could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "package-json-could-have-a-final-echo-for-task-build-like-build-build-echo-build-success",
    "package-json-should-have-one-coverage-dependency-from-nyc-c8-v8-or-use-bun-test-coverage",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-x-yy-43m30m-fixable-39m49m",
    "package-json-ts-node-without-transpile-only-detected-in-files-package-json",
    "package-json-could-have-no-task-run-via-npm-use-my-task-instead",
    "package-json-could-have-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder",
    "readme-md-could-have-a-logo-image-logofolder-any-file-ext",
    "readme-md-could-have-a-demo-image-or-gif-demofolder-any-file-ext",
    "readme-md-could-have-a-project-license-badge-project-licensehttps-img-shields-io-github-license-shuunen-a-great-repo-svgcolorinformationalhttps-github-com-shuunen-a-great-repo-blob-master-license-43m30m-fixable-39m49m",
    "readme-md-could-have-a-npm-monthly-downloads-badge-npm-monthly-downloadshttps-img-shields-io-npm-dm-svgcolorinformationalhttps-www-npmjs-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-npm-version-badge-npm-versionhttps-img-shields-io-npm-v-svgcolorinformationalhttps-www-npmjs-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-publish-size-badge-publish-sizehttps-img-shields-io-bundlephobia-min-labelpublish20sizehttps-bundlephobia-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-install-size-badge-install-sizehttps-badgen-net-packagephobia-install-https-packagephobia-com-resultp-43m30m-fixable-39m49m",
    "readme-md-could-have-a-thanks-section-thanks",
    "readme-md-could-have-a-star-chart-stargazers-over-time-43m30m-fixable-39m49m",
    "readme-md-could-have-a-page-views-counter-free-website-counterhttps-www-websitecounterfree-com-c-phpd9id60667s12-43m30m-fixable-39m49m",
    "has-a-renovate-json-file",
  ],
}
`;

exports[`check E mocks-projects folders and not throw 1`] = `
{
  "failed": [
    "has-a-editorconfig-file",
    "has-a-gitignore-file",
    "has-a-license-file",
    "has-a-nvmrc-file",
    "package-json-does-not-have-a-name-property-name",
    "package-json-does-not-have-a-typescript-build-or-check-like-build-tsc-or-check-tsc-no-emit",
    "package-json-does-not-have-prepare-instead-of-prepublish-deprecated-prepublish",
    "package-json-does-not-have-a-types-field-in-exports-types-d-ts",
    "package-json-does-not-have-a-main-field-pointing-to-an-esm-js-like-main-dist-index-js",
    "package-json-does-not-have-an-exports-field-with-import-esm-js-require-cjs-cjs-like-exports-import-dist-index-js-require-dist-index-cjs",
  ],
  "passed": [
    "avoid-main-branch-reference-use-master-instead-git-bclean",
    "has-a-package-json-file",
    "package-json-has-a-description-property",
    "package-json-has-a-author-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-mit-license",
    "package-json-has-a-script-section",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-no-ci-script",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-should-have-one-unit-testing-dependency-from-vitest-mocha-uvu-or-use-bun-test",
    "package-json-assert-dependency-used-in-import-equal-from-uvu-assert-instead-works-also-as-deep-equal-alternative",
    "package-json-has-no-npm-test",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
    "package-json-has-a-type-module-declaration-for-modern-practices",
    "package-json-has-no-module-field",
    "readme-md-has-a-title",
    "readme-md-has-no-link-to-deprecated-netlify-com",
    "readme-md-has-no-links-without-https-scheme",
    "readme-md-has-no-crlf-windows-carriage-return",
    "readme-md-has-no-star-flavored-list",
    "readme-md-has-no-deprecated-bettercodehub-com-badge",
    "readme-md-has-no-deprecated-david-dm-org-badge",
    "readme-md-has-no-deprecated-lgtm-com-badge",
    "readme-md-has-no-deprecated-scrutinizer-ci-com-badge",
    "readme-md-has-no-deprecated-libraries-io-badge",
    "has-a-repo-checker-json-file",
    "tsconfig-json-has-a-schema-declaration",
    "tsconfig-json-has-an-include-section",
    "tsconfig-json-has-a-verbatim-module-syntax-compiler-option",
    "tsconfig-json-has-a-out-dir-compiler-option",
    "tsconfig-json-has-a-module-resolution-compiler-option",
    "tsconfig-json-has-a-non-empty-lib-compiler-option",
    "tsconfig-json-my-folder-is-not-needed-in-include-section-my-folder-is-enough",
  ],
  "warnings": [
    "use-dependency-cruiser",
    "has-a-npmrc-file",
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-could-have-a-schema-declaration-like-schema-https-json-schemastore-org-package-43m30m-fixable-39m49m",
    "package-json-could-have-a-bugs-property-bugs",
    "package-json-could-have-a-files-property-files-n",
    "package-json-could-have-a-homepage-property-homepage",
    "package-json-could-have-a-keywords-property-keywords-n",
    "package-json-could-have-a-private-property-private-falsetrue-n",
    "package-json-could-have-a-repository-property-repository-n",
    "package-json-could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "package-json-could-have-pnpm-instead-of-npm-run-use-pnpm-instead-of-npm-run-for-performance-43m30m-fixable-39m49m",
    "package-json-could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "package-json-could-have-a-final-echo-for-task-build-like-build-build-echo-build-success",
    "package-json-should-have-one-coverage-dependency-from-nyc-c8-v8-or-use-bun-test-coverage",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-x-yy-43m30m-fixable-39m49m",
    "package-json-ts-node-without-transpile-only-detected-in-files-package-json",
    "package-json-could-have-no-task-run-via-npm-use-my-task-instead",
    "package-json-could-have-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder",
    "readme-md-could-have-a-logo-image-logofolder-any-file-ext",
    "readme-md-could-have-a-demo-image-or-gif-demofolder-any-file-ext",
    "readme-md-could-have-a-project-license-badge-project-licensehttps-img-shields-io-github-license-shuunen-a-great-repo-svgcolorinformationalhttps-github-com-shuunen-a-great-repo-blob-master-license-43m30m-fixable-39m49m",
    "readme-md-could-have-a-npm-monthly-downloads-badge-npm-monthly-downloadshttps-img-shields-io-npm-dm-svgcolorinformationalhttps-www-npmjs-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-npm-version-badge-npm-versionhttps-img-shields-io-npm-v-svgcolorinformationalhttps-www-npmjs-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-publish-size-badge-publish-sizehttps-img-shields-io-bundlephobia-min-labelpublish20sizehttps-bundlephobia-com-package-43m30m-fixable-39m49m",
    "readme-md-could-have-a-install-size-badge-install-sizehttps-badgen-net-packagephobia-install-https-packagephobia-com-resultp-43m30m-fixable-39m49m",
    "readme-md-could-have-a-thanks-section-thanks",
    "readme-md-could-have-a-star-chart-stargazers-over-time-43m30m-fixable-39m49m",
    "readme-md-could-have-a-page-views-counter-free-website-counterhttps-www-websitecounterfree-com-c-phpd9id60667s12-43m30m-fixable-39m49m",
    "has-a-renovate-json-file",
  ],
}
`;
